# rust-dev

./: .env  .gitignore  Cargo.toml  docker-compose.yml  readme.md
.sqlx/: query-35d9789821994fb5251ef081c287bd617a22e702bc5fa708dfd438d39dd35dfc.json  query-a779c24d998b8e9c018cc4b22a81d475f3ac0c66246a407d7500358e3e1d2e79.json  query-bcfad2769e528ff43c5a97d005cb599ebed5b8ff2db5ec3e14fe2787e6c0140a.json
axum_base/: Cargo.toml  build.rs
axum_base/src/: error.rs  main.rs
axum_base/src/config/: mod.rs  postgres_pool.rs  redis_pool.rs
axum_base/src/constant/: mod.rs  type_config.rs
axum_base/src/controller/: chat.rs  mod.rs  user_controller.rs
axum_base/src/grpc/: mod.rs
axum_base/src/init/: app_state.rs  initialize.rs  mod.rs
axum_base/src/kafka/: mod.rs
axum_base/src/model/: user.rs
axum_base/src/protos/: mod.rs
axum_base/src/route/: api.rs
axum_base/src/websocket/: mod.rs
fixture/: start.sh
migrations/: 20250305154406_init.sql  20250309063921_workspace.sql
protos/: voting.proto
~/.cargo/: config.toml
