[package]
name = "axum_base"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
redis = { version = "0.29.1", features = ["tokio-comp", "r2d2"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-native-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.12"
serde_json = "1.0.138"