[package]
name = "axum_base"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
redis = { version = "0.29.1", features = ["tokio-comp", "r2d2"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19",features = [] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-native-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.12"
serde_json = "1.0.138"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "compression-full"] }
anyhow = "1.0.98"
dotenv = "0.15"
sha2 = "0.10"
jsonwebtoken = "9.3.1"
chrono = "0.4"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
schemars = "0.8"
validator = { version = "0.16", features = ["derive"] }
regex = "1.10.3"
once_cell = "1.19.0"