[package]
name = "axum_base"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1",features = ["ws"] }
redis = { version = "0.29.1", features = ["tokio-comp", "r2d2"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19",features = [] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-native-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.12"
serde_json = "1.0.138"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "compression-full"] }
anyhow = "1.0.98"
dotenv = "0.15"
sha2 = "0.10"
jsonwebtoken = "9.3.1"
chrono = "0.4"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
validator = { version = "0.16", features = ["derive"] }
sqlx-paginated = { version = "0.2.31", features = ["postgres"] }
testcontainers = "0.15"
kafka = "0.10"
tonic = "0.11"
prost = "0.12"
futures-util = "0.3"
clickhouse = "0.13.2"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
testcontainers = "0.15"
tokio = { version = "1.0", features = ["full", "test-util"] }
tonic-build = { version = "0.10", features = ["prost"] }
clickhouse = { version = "0.13.2", features = ["test-util"] }


